# CACodeGen

./:  clangLog.txt  .gitmodules  CMakeLists.txt  README.md
CInterfaceCodeGen/: CInterfaceCodeGenerator.cpp  CInterfaceGeneratorCommon.cpp  CInterfaceGeneratorCommon.h  CmakeLists.txt
CSharpBindingsCodeGen/: CSharpBindingsCodeGenerator.cpp  CmakeLists.txt
ExternalLibraries/: CMakeLists.txt
ExternalLibraries/LLVM/: CMakeLists.txt
MetaParser/: CMakeLists.txt  main.cpp
MetaParser/CMake/: MetaParser.cmake
MetaRuntime/include/CAMeta/: CAMetaCodeGenCommon.h  CAMetaProps.h
ParserLibrary/: CMakeLists.txt  pch.h  schema_module.h  string_utils.h
ParserLibrary/Cursor/: cursor.cpp  cursor.h  namespace.cpp  namespace.h
ParserLibrary/Generator/: Generator.cpp  Generator.h  GeneratorManager.cpp  GeneratorManager.h
ParserLibrary/LanguageTypes/: BaseType.cpp  BaseType.h  ClassOrStruct.cpp  ClassOrStruct.h  CodeInfoContainer.cpp  CodeInfoContainer.h  FieldInfo.cpp  FieldInfo.h  MethodInfo.cpp  MethodInfo.h  NameSpaceInfo.cpp  NameSpaceInfo.h
ParserLibrary/MetaData/: MetaDataContainer.cpp  MetaDataContainer.h  MetaPropertyInfo.cpp  MetaPropertyInfo.h
ParserLibrary/Parser/: parser.cpp  parser.h  parser_options.cpp  parser_options.h
ReflectionAndSerialize/: CMakeLists.txt
ReflectionAndSerialize/Runtime/: CMakeLists.txt
ReflectionAndSerialize/Runtime/include/CAReflection/: reflection.h
Runtime/: CMakeLists.txt
Runtime/include/CACodeGen/: CAMetaProps.h
Test/: CMakeLists.txt  TestHeader.h  TestImpl.cpp  TestProp.cs  testmain.cpp
Test/CodeGen/: C_CACodeGenTest_CodeGen.cpp  C_CACodeGenTest_CodeGen.h  CodeGen.cpp
Test/CodeGen/CSharp/: InnerStruct.cs  TestClass1.cs  TestProp.cs
Test/TestInclue/: TestHeaderInInclude.h
language_types/: class.cpp  namespace.h  type_info.cpp  type_info.h
