set(LLVM_DIR ${CMAKE_CURRENT_SOURCE_DIR})
project(CLANG_LIB)
add_library(CLANG_LIB SHARED IMPORTED GLOBAL)

#target_include_directories(libclang INTERFACE ${LLVM_DIR}/include)
set_property(TARGET CLANG_LIB PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${LLVM_DIR}/include)

if (CMAKE_HOST_WIN32)
    set(LLVM_LIBRARY_DIR  ${LLVM_DIR}/lib/x64)
    set(LLVM_SHARED_LIBRARY_DIR  ${LLVM_DIR}/bin/x64)
    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} /O2 /Ob2")
    set_property(TARGET CLANG_LIB PROPERTY IMPORTED_LOCATION ${LLVM_SHARED_LIBRARY_DIR}/libclang.dll)
    set_property(TARGET CLANG_LIB PROPERTY IMPORTED_IMPLIB ${LLVM_LIBRARY_DIR}/libclang.lib)
    #target_link_libraries(CLANG_LIB INTERFACE ${LLVM_LIBRARY_DIR}/libclang.lib)
    #target_link_libraries(CLANG_LIB INTERFACE ${LLVM_SHARED_LIBRARY_DIR}/libclang.dll)
elseif(${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
    set(LLVM_LIBRARY_DIR  ${LLVM_DIR}/lib/Linux)
    set(LLVM_SHARED_LIBRARY_DIR  ${LLVM_DIR}/bin/Linux)
    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O3")
    set_property(TARGET CLANG_LIB PROPERTY IMPORTED_IMPLIB ${LLVM_SHARED_LIBRARY_DIR}/libclang.so.12)
    #target_link_libraries(CLANG_LIB INTERFACE ${LLVM_SHARED_LIBRARY_DIR}/libclang.so.12)
elseif(${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "arm64") 
    # link to XCode Toolchains' universal binary libclang.dylib 
    set(LLVM_LIBRARY_DIR  ${LLVM_DIR}/lib/macOS)
    set(LLVM_SHARED_LIBRARY_DIR  ${OSX_DEVELOPER_ROOT}/Toolchains/XcodeDefault.xctoolchain/usr/lib)
    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O3")
    set_property(TARGET CLANG_LIB PROPERTY IMPORTED_IMPLIB ${LLVM_SHARED_LIBRARY_DIR}/libclang.dylib)
    #target_link_libraries(CLANG_LIB INTERFACE ${LLVM_SHARED_LIBRARY_DIR}/libclang.dylib)    
else()
    set(LLVM_LIBRARY_DIR  ${LLVM_DIR}/lib/macOS)
    set(LLVM_SHARED_LIBRARY_DIR  ${LLVM_DIR}/bin/macOS)
    set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O3")
    set_property(TARGET CLANG_LIB PROPERTY IMPORTED_IMPLIB ${LLVM_SHARED_LIBRARY_DIR}/libclang.dylib)
    #target_link_libraries(CLANG_LIB INTERFACE ${LLVM_SHARED_LIBRARY_DIR}/libclang.dylib)
endif()

#add_definitions(-DTIXML_USE_STL)